	                 it to be unmapped, as this may let several windows disappear at once randomly
			 not just the one that sent the request, this bug appears mostly in Xinerama
			 setups, but is not limited to it. The change is not 100% failsafe at the moment
			 but it reduces the failure-rate by 95% which is the reason why it is integrated
			 while not beeing final. [Janek Kozicki]

2009-11-14  Teika kazura <teika@lavabit.com>
	* sawfish-client.jl: won't say "bye" at exit. The greeting "bye" annoys if you use emacs' sawfish-mode, so drop it.

	* README.IMPORTANT
	* man/faq.texi
	* man/news.texi: Description on reboot and shutdown is improved. It was put in README.IMPORTANT, but moved to faq.texi.

	* OPTIONS
	* lisp/sawfish/wm/util/play-audio.jl
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi: Doc improvements on sound support change.

	* OPTIONS
	* lisp/sawfish/wm/workspace.jl
	* man/news.texi
	* man/sawfish.texi: Minor doc improvements.

2009-11-03  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/state/maximize.jl: removed maximize-reframe maximize-unframe

2009-11-03  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands.jl
	* man/news.texi
	* man/sawfish.texi: `this-command' is set to nil when command execution is over.

	* scripts/sawfish-client.jl: sawfish-client says "Bye." on normal exit.

	* lisp/sawfish/wm/state/maximize.jl
	* man/news.texi
	* man/sawfish.texi :Bugfix. Commands 'maximize-window-fullscreen' and 'maximize-window-fullxinerama' work. Related doc error is corrected, too.

	* lisp/sawfish/wm/extras.jl
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/user.jl: Moved contents of wm/extras.jl to wm/frames.jl, and deleted extras.jl.

2009-10-28  Christopher Bratusek <zanghar@freenet.de>
	* scripts/sawfish-client.jl: merged branch `quit' from Ti-Mo (improved ,quit action)

2009-10-27  Christopher Bratusek <zanghar@freenet.de>
	* debian/*: added debian packaging scripts based on the official ones
